fix(themes): consistently apply spacing to top and bottom margins of blocks

--- a/web/src/themes/base/admonitions.css
+++ b/web/src/themes/base/admonitions.css
@@ -141,6 +141,7 @@
 stencila-admonition {
     display: block;
     margin-top: var(--admonition-spacing);
+    margin-bottom: var(--admonition-spacing);
 }
 
 stencila-admonition details {
