--- a/web/src/themes/base/lists.css
+++ b/web/src/themes/base/lists.css
@@ -61,6 +61,7 @@ stencila-list {
 
     /* Spacing */
     margin-top: var(--list-spacing);
+    margin-bottom: var(--list-spacing);
 
     ul,
     ol {
