--- a/web/src/themes/base/math.css
+++ b/web/src/themes/base/math.css
@@ -72,6 +72,7 @@ stencila-math-block {
 
     gap: var(--math-label-gap);
     margin-top: var(--math-spacing);
+    margin-bottom: var(--math-spacing);
 
     [slot="mathml"] {
         flex: 1;
